<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_house"
            android:title="主页总览" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_explore"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/icon_analyse"
            android:title="@string/nav_chart" />

        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/icon_filter"
            android:title="@string/nav_filter" />
    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/nav_feedback" />
    </group>

</menu>
